--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body {
-    background-image: url(/image/background.png);
+    background-image: url(image/background.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
